# design-accessibility-mcp

./: .gitignore  README.md  pyproject.toml
src/accessibility_mcp/: main.py  mcp_server.py
src/context_augment/: core.py  main.py
src/design_accessibility_mcp/: core.py  instructions.md  main.py  mcp_server.py
src/shared/: consts.py
