[project]
name = "accessibility-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.1",
    "numpy>=2.2.6",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

# Console scripts for easy running
[project.scripts]
context-augment = "context_augment.main:main"
accessibility-mcp = "accessibility_mcp.main:main"